objects/DR_Task__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DR_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployment_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment Request</label>
        <referenceTo>Deployment_Request__c</referenceTo>
        <relationshipLabel>DR Tasks</relationshipLabel>
        <relationshipName>DR_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DR Task</label>
    <nameField>
        <displayFormat>DRT-{000000000}</displayFormat>
        <label>DR Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DR Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>